--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="br.com.cwi.freegames" >
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
+        android:name=".MainApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -12,6 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FreeGames"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31" >
         <activity
             android:name=".presentation.feature.profile.ProfileActivity"
@@ -20,7 +25,7 @@
             android:name=".presentation.feature.play_later.PlayLaterActivity"
             android:exported="false" />
         <activity
-            android:name=".presentation.feature.games.GamesActivity"
+            android:name=".presentation.feature.games.GamesHostActivity"
             android:theme="@style/Theme.FreeGames.NoActionBar"
             android:exported="true" >
             <intent-filter>
