--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,9 @@ ext {
     room_version = "2.4.0"
     coroutine_version = "1.4.2"
     http_interceptor_version = "4.2.1"
+    mockk_version = "1.11.0"
+    coroutine_version = "1.4.2"
+    arch_version = "2.1.0"
 }
 
 dependencies {
@@ -87,4 +90,13 @@ dependencies {
 
     //HttpLoggingInterceptor
     implementation "com.squareup.okhttp3:logging-interceptor:$http_interceptor_version"
+
+    //Mockk
+    testImplementation "io.mockk:mockk:$mockk_version"
+
+    //Core Testing
+    testImplementation "androidx.arch.core:core-testing:$arch_version"
+
+    //Coroutines Test
+    testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutine_version")
 }
